# OmniForge

./: .gitignore  Cargo.toml  LICENSE  README.md  com.omniforge.App.json  meson.build
assets/: style.css
crates/omniforge-common/: Cargo.toml
crates/omniforge-common/src/: error.rs  events.rs  lib.rs  paths.rs  types.rs
crates/omniforge-core/: Cargo.toml
crates/omniforge-core/src/: agent_debug.rs  downloader.rs  hal.rs  lib.rs  model_registry.rs  runtime.rs
crates/omniforge-core/src/data_pipeline/: cleaner.rs  code_parser.rs  formatter.rs  ingest.rs  mod.rs  pdf_parser.rs
crates/omniforge-core/src/export/: api_server.rs  gguf_export.rs  mod.rs  ollama_export.rs
crates/omniforge-core/src/inference/: config.rs  engine.rs  mod.rs
crates/omniforge-core/src/rag/: chunker.rs  embedder.rs  mod.rs  retriever.rs  vector_store.rs
crates/omniforge-core/src/training/: hyperparams.rs  mod.rs  monitor.rs  orchestrator.rs  python_bridge.rs
crates/omniforge-core/tests/: smoke.rs
crates/omniforge-gui/: Cargo.toml
crates/omniforge-gui/src/: agent_debug.rs  app.rs  config.rs  main.rs
crates/omniforge-gui/src/components/: chat_view.rs  dashboard.rs  data_forge.rs  export_view.rs  mod.rs  model_hub.rs  rag_manager.rs  settings.rs  training_view.rs
crates/omniforge-gui/src/widgets/: file_drop_zone.rs  loss_chart.rs  mod.rs  progress_card.rs
data/: com.omniforge.App.desktop  com.omniforge.App.gschema.xml  com.omniforge.App.metainfo.xml
python/: convert_gguf.py  merge_adapter.py  requirements.txt  train_lora.py
tests/fixtures/: sample.md
