[package]
name = "omniforge-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared types, errors, and IPC events for OmniForge."

[dependencies]
directories = "5"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
