[package]
name = "omniforge-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OmniForge AI engine: HAL, training orchestration, RAG, and inference adapters."

[features]
default = []
# Optional stacks (native/Python deps). Enable as the implementation lands.
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers"]
pyo3-bridge = ["dep:pyo3"]
rag-qdrant = ["dep:qdrant-client"]

[dependencies]
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
notify = "7"
omniforge-common = { path = "../omniforge-common" }
pyo3 = { version = "0.22", optional = true, features = ["auto-initialize"] }
qdrant-client = { version = "1.12", optional = true, default-features = false, features = [
    "serde",
] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml = "0.8"
tracing.workspace = true
