[package]
name = "omniforge-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GTK4 + Libadwaita + Relm4 frontend for OmniForge."

[[bin]]
name = "omniforge"
path = "src/main.rs"

[dependencies]
adw = { version = "0.9", package = "libadwaita" }
async-channel = "2"
gtk4 = { version = "0.11", features = ["v4_14"] }
omniforge-common = { path = "../omniforge-common" }
omniforge-core = { path = "../omniforge-core" }
plotters = { version = "0.3", optional = true }
relm4 = { version = "0.11", features = ["libadwaita"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
charts = ["dep:plotters"]
